# ai_utils

./: .gitignore  GEMINI.md  HTML_to_PPTX.ipynb  PLANNING.md  README.md  logs_technical_analyst.txt  pyproject.toml  test_yfinance_call.py
.agent/: skills
.agent/rules/: CONSTITUTION.md
.agent/workflows/: speckit.plan.md  speckit.specify.md  speckit.tasks.md
.agents/memory/: plan.md  spec.md  tasks.md
.cursor/: mcp.json
.cursor/rules/: main_rule.mdc
agents/: DEBUGGER.md  ORCHESTRATOR.md  PLANNER.md  PROGRAMMER.md  STUDY.md
ai_dev_skills/: README.md
ai_dev_skills/.cursor/rules/: main_rule.mdc
ai_dev_skills/mcp/: skills_mcp.py
architecture_docs/to_do/: MCP_WEB_SUMMARIZER_ISSUE.md
mcp/: README.md  benchmark_news_summarized_comparison.py  client_example.py  docker-compose.yml  manage_mcp_servers.py  mcp-servers.service  start_servers.sh  stop_servers.sh  test_servers.py  test_web_summarizer_flow.py
mcp/damodaran_valuation/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
mcp/damodaran_valuation/db/: schema.sql
mcp/damodaran_valuation/src/: config.py  db.py  ingestion.py  server.py
mcp/damodaran_valuation/src/damodaran_valuation/: __init__.py  config.py  db.py  ingestion.py  server.py
mcp/fundamentus_b3/: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_server.py
mcp/fundamentus_b3/db/: schema.sql
mcp/fundamentus_b3/src/: __init__.py  cache.py  config.py  db.py  server.py
mcp/fundamentus_b3/src/fundamentus_b3/: __init__.py  cache.py  config.py  db.py  fundamentus_client.py  server.py
mcp/technical_analysis/src/: config.py  otel_utils.py  server.py
mcp/technical_analyst/: Dockerfile  README.md  pyproject.toml
mcp/technical_analyst/src/: server.py
mcp/web_summarizer/: README.md  docker-compose.yml  test_integration.py  test_migration.py  test_syntax.py
mcp/web_summarizer/src/: crawler.py  rate_limiter.py  server.py
mcp/web_summarizer_mcp/: Dockerfile  README.md  pyproject.toml  test_integration.py  test_migration.py  test_syntax.py
mcp/web_summarizer_mcp/prompts/: summarization_prompt.txt
mcp/web_summarizer_mcp/src/: __init__.py  config.py  crawler.py  llm_transport.py  server.py  summarizer.py  utils.py
mcp/web_summarizer_mcp/tests/: test_regression_browser_config.py
mcp/yfinance_mcp/: Dockerfile  README.md  docker-compose.yml  dry_run.py  pyproject.toml
mcp/yfinance_mcp/src/: __init__.py  chart.py  config.py  server.py  utils.py  web_summarizer_client.py
tests/mcp/: test_servers.py
tests/mcp/technical_analyst/: test_technical_analysis.py
tests/mcp/web_summarizer/: test_web_summarizer_flow.py
tests/mcp/yfinance/: test_concurrent_search.py
tools/: README.md  __init__.py  main.py  pyproject.toml
tools/esaj_scraper/: __init__.py  __main__.py  config.py  models.py  parser.py  scraper.py
tools/esaj_scraper/debug/: playwright_result_1002589_56_2018_8_26_0053.html  processo_1002589_56_2018_8_26_0053.html
tools/tests/: __init__.py  test_scraper.py
tools/transcriber/: main.py
