[project]
name = "esaj-scraper"
version = "0.1.0"
description = "Scraper for e-SAJ portal (Tribunal de Justiça de São Paulo) using Crawl4AI"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.3.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiohttp>=3.9.0",
    "ipykernel>=7.1.0",
    "pyfundamentus>=0.0.12",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "anyio>=4.12.0",
    "pytest-asyncio>=1.3.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
    "twisted>=25.5.0",
    "service-identity>=24.2.0",
    "llvmlite>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"




