[project]
name = "fundamentus-b3"
version = "0.1.0"
description = "Fundamentus MCP Server for B3 Stock Data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pyfundamentus>=0.0.12",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

