[project]
name = "web-summarizer-mcp"
version = "0.1.0"
description = "Web Summarizer MCP Server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.3.0",
    "openai",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "trafilatura>=1.12.0",
    "httpx>=0.27.0",
    "langchain-litellm",
    "litellm",
    "aiolimiter",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
